// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CronPresetButton> renders correctly 1`] = `
<Fragment>
  <Button
    dataTest="dhis2-uicore-button"
    onClick={[Function]}
    small={false}
    type="button"
  >
    Choose from preset times
  </Button>
</Fragment>
`;

exports[`<CronPresetButton> renders small correctly 1`] = `
<Fragment>
  <Button
    dataTest="dhis2-uicore-button"
    onClick={[Function]}
    small={true}
    type="button"
  >
    Choose from preset times
  </Button>
</Fragment>
`;
